<resources>
    <!--Janela-->
    <string name="app_name">Agenda</string>

    <!-- layouts -->
    <string name="evento">Evento</string>
    <string name="data_inicio">Data Início</string>
    <string name="hora_inicio">Hora Início</string>
    <string name="data_fim">Data Fim</string>
    <string name="hora_fim">Hora Fim</string>

    <string name="convidados">Convidados</string>

    <string name="organizador">Organizador</string>
    <string name="convidado">Convidado</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>

    <string name="criar_evento">Criar Evento</string>

    <!-- Erros -->
    <string name="erro">Erro</string>
    <string name="erro_Nome">Erro</string>
    <string name="erro_DataInicio">Erro</string>
    <string name="erro_HoraInicio">Erro</string>
    <string name="erro_DataFim">Erro</string>
    <string name="erro_HoraFim">Erro</string>

    <string name="nenhumOrganizador">Nenhum Organizador</string>
    <string name="nenhumConvidado">Nenhum Convidado</string>

    <string name="agenda_error">Erro ao criar Evento</string>

    <!-- Sucessos -->
    <string name="agenda_success">Salvo na Agenda</string>
    <string name="whatsapp_success">Salvo no WhatsApp</string>
    <string name="facebook_success">Salvo no Facebook</string>
    <string name="linkedin_success">Salvo no Linkedin</string>

    <!-- Mensagens -->
    <string name="invited">Você foi convidado</string>

    <!--Controle-->
    <string name="facebook_app_name">Eventos</string>
    <string name="facebook_app_id">359790124459089</string>

    <string name="country_code">BR</string>
    <string name="dialog_fire_missiles">Tela</string>
    <string name="signin">OK</string>
    <string name="cancel">Cancel</string>
</resources>
